@@ -241,18 +241,6 @@ argument_list|(
 name|this
 argument_list|)
 expr_stmt|;
-name|this
-operator|.
-name|store
-operator|.
-name|lock
-operator|.
-name|readLock
-argument_list|()
-operator|.
-name|lock
-argument_list|()
-expr_stmt|;
 try|try
 block|{
 name|openReaders
@@ -289,21 +277,6 @@ expr_stmt|;
 throw|throw
 name|e
 throw|;
-block|}
-finally|finally
-block|{
-name|this
-operator|.
-name|store
-operator|.
-name|lock
-operator|.
-name|readLock
-argument_list|()
-operator|.
-name|unlock
-argument_list|()
-expr_stmt|;
 block|}
 block|}
 comment|/*    * Go open new Reader iterators and cue them at<code>firstRow</code>.    * Closes existing Readers if any.    * @param firstRow    * @throws IOException    */
