@@ -169,6 +169,50 @@ name|hadoop
 operator|.
 name|hbase
 operator|.
+name|NotServingRegionException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|UnknownScannerException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|io
+operator|.
+name|BatchUpdate
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
 name|io
 operator|.
 name|Cell
@@ -261,6 +305,17 @@ argument_list|(
 literal|"hbase.master.lease.thread.wakefrequency"
 argument_list|,
 literal|5
+operator|*
+literal|1000
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|setInt
+argument_list|(
+literal|"hbase.regionserver.lease.period"
+argument_list|,
+literal|10
 operator|*
 literal|1000
 argument_list|)
@@ -401,6 +456,301 @@ name|closeAndDelete
 argument_list|()
 expr_stmt|;
 block|}
+block|}
+block|}
+comment|/**    * Test for HBASE-810    * @throws Exception    */
+specifier|public
+name|void
+name|testScanSplitOnRegion
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|HRegion
+name|region
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|HTableDescriptor
+name|htd
+init|=
+name|createTableDescriptor
+argument_list|(
+name|getName
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|htd
+operator|.
+name|addFamily
+argument_list|(
+operator|new
+name|HColumnDescriptor
+argument_list|(
+name|COLFAMILY_NAME3
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|region
+operator|=
+name|createNewHRegion
+argument_list|(
+name|htd
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|addContent
+argument_list|(
+name|region
+argument_list|,
+name|COLFAMILY_NAME3
+argument_list|)
+expr_stmt|;
+name|region
+operator|.
+name|flushcache
+argument_list|()
+expr_stmt|;
+specifier|final
+name|byte
+index|[]
+name|midkey
+init|=
+name|region
+operator|.
+name|compactStores
+argument_list|()
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|midkey
+argument_list|)
+expr_stmt|;
+name|byte
+index|[]
+index|[]
+name|cols
+init|=
+block|{
+name|COLFAMILY_NAME3
+block|}
+decl_stmt|;
+specifier|final
+name|InternalScanner
+name|s
+init|=
+name|region
+operator|.
+name|getScanner
+argument_list|(
+name|cols
+argument_list|,
+name|HConstants
+operator|.
+name|EMPTY_START_ROW
+argument_list|,
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+specifier|final
+name|HRegion
+name|regionForThread
+init|=
+name|region
+decl_stmt|;
+name|Thread
+name|splitThread
+init|=
+operator|new
+name|Thread
+argument_list|()
+block|{
+specifier|public
+name|void
+name|run
+parameter_list|()
+block|{
+try|try
+block|{
+name|HRegion
+index|[]
+name|regions
+init|=
+name|split
+argument_list|(
+name|regionForThread
+argument_list|,
+name|midkey
+argument_list|)
+decl_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+name|fail
+argument_list|(
+literal|"Unexpected exception "
+operator|+
+name|e
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+decl_stmt|;
+name|splitThread
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+name|HRegionServer
+name|server
+init|=
+name|cluster
+operator|.
+name|getRegionThreads
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getRegionServer
+argument_list|()
+decl_stmt|;
+name|long
+name|id
+init|=
+name|server
+operator|.
+name|addScanner
+argument_list|(
+name|s
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|6
+condition|;
+name|i
+operator|++
+control|)
+block|{
+try|try
+block|{
+name|BatchUpdate
+name|update
+init|=
+operator|new
+name|BatchUpdate
+argument_list|(
+name|region
+operator|.
+name|getRegionInfo
+argument_list|()
+operator|.
+name|getStartKey
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|update
+operator|.
+name|put
+argument_list|(
+name|COLFAMILY_NAME3
+argument_list|,
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"val"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|region
+operator|.
+name|batchUpdate
+argument_list|(
+name|update
+argument_list|)
+expr_stmt|;
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|1000
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|e
+parameter_list|)
+block|{
+name|fail
+argument_list|(
+literal|"Unexpected exception "
+operator|+
+name|e
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+name|server
+operator|.
+name|next
+argument_list|(
+name|id
+argument_list|)
+expr_stmt|;
+name|server
+operator|.
+name|close
+argument_list|(
+name|id
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|UnknownScannerException
+name|ex
+parameter_list|)
+block|{
+name|ex
+operator|.
+name|printStackTrace
+argument_list|()
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Got the "
+operator|+
+name|ex
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 specifier|private
